Fix word wrapping in tex spans

--- a/homotopy-web/static/styles.css
+++ b/homotopy-web/static/styles.css
@@ -211,14 +211,12 @@ button, .button {
   align-items: flex-start;
 }
 
-.workspace__project-title {
+.tex__wrapper.workspace__project-title {
   flex: 0 1 auto;
   font-size: 28px;
   color: #2224;
   padding: 6px;
-  white-space: nowrap;
   overflow: hidden;
-  text-overflow: ellipsis;
   user-select: text;
 }
 
@@ -471,7 +469,6 @@ button, .button {
   border-radius: var(--space-0);
   background: transparent;
   box-sizing: border-box;
-  overflow-wrap: break-word;
   border: none;
   user-select: text;
 }
@@ -501,6 +498,7 @@ button, .button {
 
 .tex__wrapper {
   padding: 0;
+  box-sizing: border-box;
 }
 
 .tex__wrapper.tex__editable:hover {
@@ -510,6 +508,8 @@ button, .button {
 
 .tex__span {
   white-space: pre-wrap;
+  overflow-wrap: break-word;
+  box-sizing: border-box;
 }
 
 .tex__span.tex__span-placeholder {
